--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,6 +17,11 @@ transport:
 
 platforms:
   - name: centos-7.2
+    driver:
+      box: bento/centos-7.2
+  - name: debian-8.6
+    driver:
+      box: bento/debian-8.6
 
 verifier:
   name: serverspec
